# ProjetoAprendizagem

./: .gitignore  CMakeLists.txt  README  README.md  ToDoList.txt  classifierTest.py  logParser.py
doc/: BAYES_FAST_SIFT_log.tex  BAYES_FAST_SURF_log.tex  BAYES_STAR_SIFT_log.tex  BAYES_STAR_SURF_log.tex  BAYES_SURF_SIFT_log.tex  BAYES_SURF_SURF_log.tex  DTREE_FAST_SIFT_log.tex  DTREE_FAST_SURF_log.tex  DTREE_STAR_SIFT_log.tex  DTREE_STAR_SURF_log.tex  DTREE_SURF_SIFT_log.tex  DTREE_SURF_SURF_log.tex  KNN_FAST_SIFT_log.tex  KNN_FAST_SURF_log.tex  KNN_STAR_SIFT_log.tex  KNN_STAR_SURF_log.tex  KNN_SURF_SIFT_log.tex  KNN_SURF_SURF_log.tex  relatorio.tex  texbase.tex
logs/: BAYES_FAST_SIFT_log  BAYES_FAST_SURF_log  BAYES_STAR_SIFT_log  BAYES_STAR_SURF_log  BAYES_SURF_SIFT_log  BAYES_SURF_SURF_log  DTREE_FAST_SIFT_log  DTREE_FAST_SURF_log  DTREE_STAR_SIFT_log  DTREE_STAR_SURF_log  DTREE_SURF_SIFT_log  DTREE_SURF_SURF_log  KNN_FAST_SIFT_log  KNN_FAST_SURF_log  KNN_STAR_SIFT_log  KNN_STAR_SURF_log  KNN_SURF_SIFT_log  KNN_SURF_SURF_log
src/: baseclassifier.cc  baseclassifier.h  classifier.cc  classifier.h  imageset.cc  imageset.h  imginfo.cc  imginfo.h  main.cc
